--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@
 h1{
     text-align: center;}
 
+p{
+    text-align: center;
+    font-family: sans-serif;
+}
+
 #displayResults{
     display: flex;
     flex-wrap: wrap;
